@@ -1,3 +1,8 @@
+2007-01-17  John Eigelaar <jeigelaar@mweb.co.za>
+
+	* cdl/phy_eth_drivers.cdl: 
+	* src/DM9161A.c: Add support for Davicom 9161A.
+
 2006-04-07  Andrew Lunn  <andrew.lunn@ascom.ch>
 
 	* doc/eth_phy.sgml: Fixed a few typos
